objects/Customer_Relationship__c.object
<CustomObject>
    <description>To create a relationship between 1) Customer and Customer 2) Customer and Contact</description>
    <fields>
        <fullName>Contact_Person_Name__c</fullName>
        <formula>Contact_Person__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Person Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Relationship</relationshipLabel>
        <relationshipName>Customer_Relationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_1Mashup__c</fullName>
        <formula>IF ( Customer_1__r.RecordType.DeveloperName = &quot;SME_Prospect&quot;,  Customer_1__r.Name,  Customer_1__r.Name_Surname_TH__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_1__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Relationship</relationshipLabel>
        <relationshipName>Customer_Relationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_2Mashup__c</fullName>
        <formula>IF ( ISBLANK(Customer_2__c), &quot;&quot;, if( Customer_2__r.RecordType.DeveloperName = &quot;Prospect_SME&quot;,  Customer_2__r.Name,  Customer_2__r.Name_Surname_TH__c))</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Relationship (Customer)</relationshipLabel>
        <relationshipName>Customer_Relationship1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Is Owner Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Is Parent Account Of</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Relationship</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Relationship</pluralLabel>
    <recordTypes>
        <fullName>Customer_with_Contact_Person</fullName>
        <active>true</active>
        <description>To create a relationship between Customer and Contact Person</description>
        <label>Customer with Contact Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer_with_Customer</fullName>
        <active>true</active>
        <description>To create a relationship between Customer and Customer</description>
        <label>Customer with Customer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>